--- a/index.html
+++ b/index.html
@@ -1,16 +1,197 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline">
+    <h1 class="bg-black text-8xl text-white font-bold underline">
         Hello world!
     </h1>
+    <button class="bg-blue-700 text-white m-1 p-2 rounded text-2xl hover:bg-blue-900">Button</button>
+</body>
+
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campus360 - Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#4361ee',
+                        secondary: '#3f37c9',
+                        accent: '#4895ef',
+                        light: '#f8f9fa',
+                        dark: '#212529'
+                    }
+                }
+            }
+        }
+    </script>
+</head>
+
+<body class="bg-gray-50 font-sans">
+    <!-- Navigation -->
+    <nav class="bg-primary text-white shadow-lg">
+        <div class="container mx-auto px-4">
+            <div class="flex justify-between items-center py-4">
+                <div class="flex items-center space-x-2">
+                    <i class="fas fa-graduation-cap text-2xl"></i>
+                    <span class="text-xl font-bold">Campus360</span>
+                </div>
+                <div class="hidden md:flex space-x-8">
+                    <a href="#" class="hover:text-accent transition">Dashboard</a>
+                    <a href="#" class="hover:text-accent transition">Courses</a>
+                    <a href="#" class="hover:text-accent transition">Schedule</a>
+                    <a href="#" class="hover:text-accent transition">Resources</a>
+                    <a href="#" class="hover:text-accent transition">Campus</a>
+                </div>
+                <div class="flex items-center space-x-4">
+                    <button class="bg-secondary px-4 py-2 rounded-lg hover:bg-opacity-90 transition">Login</button>
+                    <button class="md:hidden">
+                        <i class="fas fa-bars text-xl"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="container mx-auto px-4 py-8">
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+            <!-- Left Column -->
+            <div class="lg:col-span-2">
+                <div class="bg-white rounded-xl shadow-md p-6 mb-6">
+                    <h2 class="text-2xl font-bold text-dark mb-4">Welcome to Campus360</h2>
+                    <p class="text-gray-600 mb-6">Your centralized platform for campus life, courses, and resources.</p>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                        <div class="bg-light p-4 rounded-lg text-center">
+                            <i class="fas fa-book text-accent text-2xl mb-2"></i>
+                            <h3 class="font-semibold">Courses</h3>
+                            <p class="text-sm text-gray-500">Access your courses</p>
+                        </div>
+                        <div class="bg-light p-4 rounded-lg text-center">
+                            <i class="fas fa-calendar text-accent text-2xl mb-2"></i>
+                            <h3 class="font-semibold">Schedule</h3>
+                            <p class="text-sm text-gray-500">View your timetable</p>
+                        </div>
+                        <div class="bg-light p-4 rounded-lg text-center">
+                            <i class="fas fa-file-alt text-accent text-2xl mb-2"></i>
+                            <h3 class="font-semibold">Resources</h3>
+                            <p class="text-sm text-gray-500">Study materials</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-xl shadow-md p-6">
+                    <h2 class="text-2xl font-bold text-dark mb-4">Recent Announcements</h2>
+                    <div class="space-y-4">
+                        <div class="border-l-4 border-accent pl-4 py-2">
+                            <h3 class="font-semibold">Semester Registration Open</h3>
+                            <p class="text-sm text-gray-600">Register for next semester courses by Friday.</p>
+                            <p class="text-xs text-gray-400">Posted 2 days ago</p>
+                        </div>
+                        <div class="border-l-4 border-green-500 pl-4 py-2">
+                            <h3 class="font-semibold">Campus Festival</h3>
+                            <p class="text-sm text-gray-600">Annual campus festival starts next week.</p>
+                            <p class="text-xs text-gray-400">Posted 5 days ago</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right Column -->
+            <div class="space-y-6">
+                <div class="bg-white rounded-xl shadow-md p-6">
+                    <h2 class="text-xl font-bold text-dark mb-4">Upcoming Events</h2>
+                    <div class="space-y-4">
+                        <div class="flex items-start">
+                            <div class="bg-primary text-white text-center p-2 rounded mr-3 w-14">
+                                <div class="text-sm">OCT</div>
+                                <div class="font-bold">18</div>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold">Career Fair</h3>
+                                <p class="text-sm text-gray-500">10:00 AM - 3:00 PM</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <div class="bg-accent text-white text-center p-2 rounded mr-3 w-14">
+                                <div class="text-sm">OCT</div>
+                                <div class="font-bold">22</div>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold">Tech Workshop</h3>
+                                <p class="text-sm text-gray-500">2:00 PM - 4:00 PM</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-xl shadow-md p-6">
+                    <h2 class="text-xl font-bold text-dark mb-4">Quick Links</h2>
+                    <div class="space-y-3">
+                        <a href="#" class="flex items-center text-gray-700 hover:text-primary transition">
+                            <i class="fas fa-library-book mr-3"></i>
+                            <span>Library Resources</span>
+                        </a>
+                        <a href="#" class="flex items-center text-gray-700 hover:text-primary transition">
+                            <i class="fas fa-id-card mr-3"></i>
+                            <span>Student ID Services</span>
+                        </a>
+                        <a href="#" class="flex items-center text-gray-700 hover:text-primary transition">
+                            <i class="fas fa-building mr-3"></i>
+                            <span>Campus Map</span>
+                        </a>
+                        <a href="#" class="flex items-center text-gray-700 hover:text-primary transition">
+                            <i class="fas fa-users mr-3"></i>
+                            <span>Student Clubs</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-8 mt-12">
+        <div class="container mx-auto px-4">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Campus360</h3>
+                    <p class="text-gray-400">Comprehensive campus management platform for students and faculty.</p>
+                </div>
+                <div>
+                    <h4 class="font-semibold mb-4">Quick Links</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white transition">Home</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition">About</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition">Contact</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="font-semibold mb-4">Contact Us</h4>
+                    <p class="text-gray-400">Email: support@campus360.edu</p>
+                    <p class="text-gray-400">Phone: (123) 456-7890</p>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 mt-8 pt-6 text-center text-gray-400">
+                <p>&copy; 2023 Campus360. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
